// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly hide in web 1`] = `""`;

exports[`should render correctly initially no warning 1`] = `
<Fragment>
  <div
    className="subtitle"
  >
    Auto Save
  </div>
  <SelectControl
    id="set-auto-save"
    label="Auto Save"
    onChange={[Function]}
    options={
      [
        {
          "label": "On",
          "selected": false,
          "value": "TRUE",
        },
        {
          "label": "Off",
          "selected": true,
          "value": "FALSE",
        },
      ]
    }
  />
  <Controls
    label="Auto Save Location"
  >
    <PathInput
      buttonTitle="Choose Folder"
      className=""
      data-id="location-input"
      defaultValue="/MyDocuments"
      forceValidValue={false}
      getValue={[Function]}
      type={1}
    />
  </Controls>
  <Controls
    label="Save Every"
  >
    <UnitInput
      abbr={false}
      className={
        {
          "half": true,
        }
      }
      decimal={0}
      defaultValue={10}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="save-every"
      isDoOnInput={false}
      max={60}
      min={1}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="m"
    />
  </Controls>
  <Controls
    label="Number of Auto Save"
  >
    <UnitInput
      abbr={false}
      className={
        {
          "half": true,
        }
      }
      decimal={0}
      defaultValue={5}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="number-of-auto-save"
      isDoOnInput={false}
      max={10}
      min={1}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </Controls>
</Fragment>
`;

exports[`should render correctly initially with warning 1`] = `
<Fragment>
  <div
    className="subtitle"
  >
    Auto Save
  </div>
  <SelectControl
    id="set-auto-save"
    label="Auto Save"
    onChange={[Function]}
    options={
      [
        {
          "label": "On",
          "selected": false,
          "value": "TRUE",
        },
        {
          "label": "Off",
          "selected": true,
          "value": "FALSE",
        },
      ]
    }
  />
  <Controls
    label="Auto Save Location"
    warningText="Specified path not found."
  >
    <PathInput
      buttonTitle="Choose Folder"
      className="with-error"
      data-id="location-input"
      defaultValue="/FolderNotExist"
      forceValidValue={false}
      getValue={[Function]}
      type={1}
    />
  </Controls>
  <Controls
    label="Save Every"
  >
    <UnitInput
      abbr={false}
      className={
        {
          "half": true,
        }
      }
      decimal={0}
      defaultValue={10}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="save-every"
      isDoOnInput={false}
      max={60}
      min={1}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="m"
    />
  </Controls>
  <Controls
    label="Number of Auto Save"
  >
    <UnitInput
      abbr={false}
      className={
        {
          "half": true,
        }
      }
      decimal={0}
      defaultValue={5}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="number-of-auto-save"
      isDoOnInput={false}
      max={10}
      min={1}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </Controls>
</Fragment>
`;
